gcc/testsuite/gcc.dg/spellcheck-params-2.c
/* { dg-do compile } */
/* { dg-options "--param does-not-resemble-anything=42" } */
/* { dg-error "unrecognized command-line option '--param=does-not-resemble-anything=42'"  "" { target *-*-* } 0 } */

